Fix button wrap

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -342,6 +342,7 @@ ul.preprints-block-list {
         height: 80px;
         font-size: 16px;
         background-color: #eef2f3;
+        white-space: normal;
     }
     .dropzone {
         background-color: #f8f8f8;
